--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.google.android.gms:play-services-appindexing:9.2.1'
+    compile 'com.android.support:cardview-v7:24.0.0'
 
     // Google
     compile 'com.google.android.gms:play-services-auth:9.2.1'
